# Sisyphus

./: .gitignore  NEXT_STEP.md  PROGRESS.md  README.md  example.py  pyproject.toml
docs/: development.md  requirements.md
sisyphus/: __init__.py  config.py
sisyphus/capabilities/: __init__.py  fs.py
sisyphus/core/: __init__.py  context.py  events.py  messages.py  options.py  results.py  runtime.py
sisyphus/hosts/: __init__.py  cli.py  mock_llm.py  sse.py
sisyphus/models/: __init__.py  base.py  openai.py
sisyphus/permissions/: __init__.py  base.py  workspace.py
sisyphus/tools/: __init__.py  base.py  registry.py
sisyphus/tools/builtin/: __init__.py  fs.py
tests/: test_config.py  test_filesystem_permissions.py  test_mock_llm.py  test_openai_provider.py  test_runtime.py  test_sse.py
