[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sisyphus-agent-runtime"
version = "0.1.0"
description = "A minimal, embeddable Python agent runtime."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[project.scripts]
sps = "sisyphus.hosts.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
