[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sisyphus-agent-runtime"
version = "0.1.0"
description = "A minimal, embeddable Python agent runtime."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[project.optional-dependencies]
mock-server = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
sps = "sisyphus.hosts.cli:main"
sps-mock-llm = "sisyphus.hosts.mock_llm:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
